# dotgov

./: .gitignore  WARP.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: socrata.md
docs/examples/chicago/: chicago.md  index.html
docs/examples/colombia/: colombia.md  index.html
docs/examples/seattle/: index.html  seattle.md
docs/guides/: discover.md  evergreen.md  query-resource.md  versions.md  where-clause.md
src/dotgov/: constants.py  socrata.py
tests/: conftest.py  test_socrata_live.py  test_socrata_mock.py
