[project]
name = "dotgov"
version = "0.1.0"
description = "A library for accessing government Open Data"
readme = "README.md"
authors = [
    { name = "Germán Muñoz", email = "46906587+munozbravo@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
