[project]
name = "dotgov"
version = "0.1.0"
description = "A library for accessing government Open Data"
readme = "README.md"
authors = [
    { name = "Germán Muñoz", email = "46906587+munozbravo@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bpython>=0.25",
    "marimo>=0.14.17",
    "pytest>=8.4.1",
]
